# data-dictionary-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cli.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  tests.yaml
.github/workflows/: tests.yaml
data_dictionary_generator/: README.md  cli.py  column_stats.py  data_type.py  description_generator.py  generate_dictionary.py  generator.py  llm_relationships_inference.py  load_dataset.py  metadata_extraction.py  pattern_extraction.py  relationship_inference.py  relationships.py  schema_visualization.py
tests/: test_cli.py  test_generator.py
