[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data-dictionary-generator"
version = "0.1.0"
description = "Data dictionary generator"
authors = ["Raffaele Giancotti <raf95@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
tokenizers = "^0.12.1"
