[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-atlas"
version = "0.0.7"
description = "Generate clinical data dictionaries using language models"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Raffaele Giancotti", email = "raffaele.giancotti@unical.it"}]
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "ollama>=0.1.0",
    "torch>=2.0.0",
    "transformers>=4.20.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "reportlab>=3.6.0",
    "tqdm>=4.60.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
generate-dictionary = "data_dictionary_generator.generate_dictionary:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_dictionary_generator*"]
